@@ -359,11 +359,11 @@ bool Value::getv2(double &x, double &y) const
 	return true;
 }
 
-bool Value::getv3(double &x, double &y, double &z) const
+bool Value::getv3(double &x, double &y, double &z, double defaultval) const
 {
 	if (this->type == VECTOR && this->vec.size() == 2) {
 		if (getv2(x, y)) {
-			z = 0;
+			z = defaultval;
 			return true;
 		}
 		return false;
